<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/goodgrey"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/plantCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp">

                <ImageView
                    android:id="@+id/goBack1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/ic_arrow_back_24dp"
                    android:tint="@color/cardview_dark_background"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/techsays"
                    android:textColor="@android:color/black"
                    android:textSize="36sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/goBack1" />

                <TextView
                    android:id="@+id/nursery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:alpha="0.5"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/techsayspvt"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/plant_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/nursery"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/des"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nursery" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/plant2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.75"
                    app:layout_constraintTop_toBottomOf="@+id/plant_price"
                    android:layout_marginLeft="36dp" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/logoaboutus"
                    style="@style/Widget.Design.FloatingActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    app:backgroundTint="@color/colorPrimary"
                    app:elevation="0dp"
                    app:fabSize="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/plant_price"
                    app:srcCompat="@drawable/logo" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="top" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plantCardView">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/i1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:backgroundTint="@color/white"
                    android:background="@drawable/ic_local_phone_black_24dp" />

                <TextView
                    android:id="@+id/n1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_toEndOf="@+id/i1"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="Phone"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:layout_toRightOf="@+id/i1" />

                <TextView
                    android:id="@+id/s1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:alpha="0.7"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="+919744613979"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/i2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:backgroundTint="@color/white"
                    android:background="@drawable/email_icon" />

                <TextView
                    android:id="@+id/n2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_toEndOf="@+id/i2"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="Email"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:layout_toRightOf="@+id/i2" />

                <TextView
                    android:id="@+id/s2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:alpha="0.7"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="contact@techsays.in"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/i3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:backgroundTint="@color/white"
                    android:background="@drawable/ic_location_24dp" />

                <TextView
                    android:id="@+id/n3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_toEndOf="@+id/i3"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="Location"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:layout_toRightOf="@+id/i3" />

                <TextView
                    android:id="@+id/s3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:alpha="0.7"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="Ernakulam"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/poppins_bold"
                android:text="MORE"
                android:textColor="@android:color/white"
                android:textSize="23sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="www.techsays.in"
                android:textColor="#2196F3"
                android:textSize="14sp" />

            <Button
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:fontFamily="@font/poppins_semibold"
                android:padding="16dp"
                android:text="@string/Contact"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:backgroundTint="@color/colorPrimary"
                android:background="@drawable/circularbordersolid"
                app:cornerRadius="30dp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>